@@ -7,6 +7,7 @@ VERSION 1.5.X
 
   CHANGES:
 	* Provided new patch to let Rich Media extension be compatible with SF 2.1.2
+	* Migrate upload functionality from PrototypeJS to jQuery.
 
   BUGFIXES:
 	14592 - SemanticForms uses "for ... in" loops in its JavaScript (moved patch part from RM to SF)
